# apple-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
lib/c-ffi/: Cargo.toml  README.md
lib/c-ffi/src/: lib.rs
lib/corefoundation/: Cargo.toml  README.md
lib/corefoundation-sys/: Cargo.toml  README.md  build.rs
lib/corefoundation-sys/src/: bindings.rs  lib.rs  string.rs  string_encoding_ext.rs  sys.rs
lib/corefoundation-sys/src/bindings/: range.rs
lib/corefoundation-sys/src/bindings/range/: tests.rs
lib/corefoundation-sys/src/sys/: base.rs  string.rs
lib/corefoundation/src/: base.rs  lib.rs  rc.rs  string.rs
lib/corefoundation/src/base/: ffi.rs  index.rs  object.rs  range.rs
lib/corefoundation/src/base/ffi/: convert.rs
lib/corefoundation/src/rc/: boxed.rs  sync.rs
lib/corefoundation/src/string/: character_set.rs  constant.rs  encoding.rs  reader.rs  tests.rs
lib/corefoundation/src/string/tests/: create.rs  get_bytes.rs  reader.rs
lib/darwin/: Cargo.toml  README.md
lib/darwin-sys/: Cargo.toml  README.md
lib/darwin-sys/src/: lib.rs  posix.rs
lib/darwin-sys/src/posix/: unistd.rs
lib/darwin/src/: _sys.rs  c.rs  errno.rs  function_id.rs  io.rs  lib.rs  posix.rs  sys.rs  unistd.rs
lib/darwin/src/_sys/: mod.rs  posix.rs  sys.rs
lib/darwin/src/_sys/c/: errno.rs  mod.rs
lib/darwin/src/_sys/posix/: fcntl.rs  mod.rs  unistd.rs
lib/darwin/src/_sys/sys/: clonefile.rs  errno.rs  mod.rs  qos.rs  stat.rs  types.rs
lib/darwin/src/c/: errno.rs
lib/darwin/src/posix/: fcntl.rs  mod.rs  unistd.rs
lib/darwin/src/posix/unistd/: sys_cfg.rs
lib/darwin/src/sys/: clonefile.rs  mod.rs  qos.rs  stat.rs
lib/dispatch/: Cargo.toml  README.md  build.rs
lib/dispatch-sys/: Cargo.toml  README.md  build.rs
lib/dispatch-sys/src/: base.rs  lib.rs  once.rs
lib/dispatch/src/: lazy_static.rs  lib.rs  object.rs  once.rs  queue.rs
lib/dispatch/src/sys/: base.rs  mod.rs  object.rs  queue.rs
lib/foundation/: Cargo.toml  README.md
lib/foundation/src/: dictionary.rs  lib.rs  macros.rs  object.rs  runtime.rs  sel.rs  string.rs  tests.rs  value.rs
lib/icu/: Cargo.toml  README.md
lib/icu-sys/: Cargo.toml  README.md  build.rs
lib/icu-sys/src/: lib.rs  uchar.rs  umachine.rs  uversion.rs
lib/icu/src/: lib.rs  uchar.rs
lib/objc4/: Cargo.toml
lib/objc4/src/: arc.rs  boxed.rs  class.rs  lib.rs  macros.rs  nsobject.rs  object.rs  sys.rs  upcast.rs
lib/os/: Cargo.toml  README.md
lib/os/src/: activity.rs  lib.rs  log.rs  macros.rs  trace_base.rs
lib/os/src/sys/: activity.rs  log.rs  mod.rs  trace_base.rs
lib/retain-release/: Cargo.toml  README.md
lib/retain-release/src/: ffi.rs  lib.rs  rc.rs
lib/retain-release/src/rc/: boxed.rs  sync.rs
lib/test_util/src/: tests.rs
src/: arc.rs  boxed.rs  class.rs  lib.rs  macros.rs  nsobject.rs  objc.rs  rc.rs  sel.rs  sys.rs
