[workspace]
members = [
    "lib/c-ffi",
    "lib/corefoundation",
    "lib/corefoundation-sys",
    "lib/darwin",
    "lib/darwin-sys",
    "lib/dispatch",
    "lib/dispatch-sys",
    "lib/icu",
    "lib/icu-sys",
    "lib/os",
    "lib/retain-release",
]
resolver = "2"

[workspace.package]
authors = [
     "Brian T. Kelley <brian@briantkelley.com>",
]
categories = [
    "api-bindings",
    "no-std",
    "os::macos-apis",
]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/briantkelley/apple-rs"
rust-version = "1.80"
version = "0.0.1"

[workspace.lints.clippy]
arithmetic_side_effects = "warn"
assertions_on_result_states = "warn"
cargo = { level = "warn", priority = -1 }
default_numeric_fallback = "warn"
empty_structs_with_brackets = "warn"
if_then_some_else_none = "warn"
indexing_slicing = "warn"
let_underscore_must_use = "warn"
missing_assert_message = "warn"
missing_inline_in_public_items = "warn"
mod_module_files = "warn"
multiple_inherent_impl = "warn"
nursery = { level = "warn", priority = -1 }
obfuscated_if_else = "warn"
panic_in_result_fn = "warn"
pattern_type_mismatch = "warn"
pedantic = { level = "warn", priority = -1 }
pub_without_shorthand = "warn"
semicolon_outside_block = "warn"
single_char_lifetime_names = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
string_slice = "warn"
undocumented_unsafe_blocks = "warn"
unreachable = "warn"
unseparated_literal_suffix = "warn"
unwrap_used = "warn"

[workspace.lints.rust]
deprecated_in_future = "warn"
keyword_idents = { level = "warn", priority = -1 }
let_underscore_drop = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
missing_abi = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
non_ascii_idents = "warn"
noop_method_call = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused = { level = "warn", priority = -1 }
unused_crate_dependencies = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_results = "warn"
variant_size_differences = "warn"

[workspace.lints.rustdoc]
missing_crate_level_docs = "warn"
private_doc_tests = "warn"

[profile.bench]
overflow-checks = true

[profile.release]
overflow-checks = true
panic = "abort"
