[package]
authors.workspace = true
categories = [
    "external-ffi-bindings",
    "no-std",
    "no-std::no-alloc",
    "os::macos-apis",
]
description = "Direct FFI bindings to Apple's CoreFoundation Clang module."
edition.workspace = true
keywords = [
    "apple",
    "core",
    "foundation",
    "ios",
    "mac",
    "macos",
    "sys",
]
license.workspace = true
name = "corefoundation-sys"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true
