[package]
authors.workspace = true
categories.workspace = true
description = "Idiomatic Rust bindings to Apple's CoreFoundation Clang module."
edition.workspace = true
keywords = [
    "apple",
    "core",
    "foundation",
    "ios",
    "mac",
    "macos",
]
license.workspace = true
name = "corefoundation"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
c-ffi = { path = "../c-ffi" }
corefoundation-sys = { path = "../corefoundation-sys" }
retain-release = { path = "../retain-release" }

[features]
default = ["std"]

alloc = []
std = ["alloc", "corefoundation-sys/std"]

[lints]
workspace = true
