[package]
authors = [
    "Brian T. Kelley <brian@briantkelley.com>",
]
categories = [
    "api-bindings",
    "no-std",
    "os::macos-apis",
]
description = "Idiomatic Rust bindings for Apple's Foundation framework."
edition = "2021"
keywords = [
    "apple",
    "foundation",
    "objc",
    "objective-c",
]
license = "Apache-2.0"
name = "objc4_foundation"
repository = "https://github.com/briantkelley/rust-objc4"
rust-version = "1.64"
version = "0.0.1"

[dependencies]
objc4 = { path = "../objc4" }
