[package]
authors.workspace = true
categories.workspace = true
description = "Idiomatic Rust bindings for Apple's Foundation framework."
edition.workspace = true
keywords = [
    "apple",
    "foundation",
    "objc",
    "objective-c",
]
license.workspace = true
name = "objc4_foundation"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
objc4 = { path = "../objc4" }
