[package]
authors.workspace = true
categories.workspace = true
description = "Direct FFI bindings to Apple's ICU Clang module."
edition.workspace = true
keywords = [
    "apple",
    "darwin",
    "iOS",
    "macOS",
    "unicode",
]
license.workspace = true
name = "icu-sys"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true
