[package]
authors.workspace = true
categories.workspace = true
description = "Idiomatic Rust bindings for Apple's Objective-C runtime."
edition.workspace = true
keywords = [
    "apple",
    "objc",
    "objective-c",
]
license.workspace = true
name = "objc4"
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
paste = { git = "https://github.com/briantkelley/paste.git", branch = "paste-literal" }
