[package]
authors.workspace = true
categories.workspace = true
description = "Idiomatic Rust bindings to the C interfaces expressed in Apple's OS Clang module."
edition.workspace = true
keywords = [
    "apple",
    "darwin",
    "iOS",
    "macOS",
]
license.workspace = true
name = "os"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
paste = "1.0.9"
