[package]
authors.workspace = true
categories.workspace = true
description = "Support for building idiomatic Rust bindings for foreign heap-allocated, reference-counted objects."
edition.workspace = true
keywords = [
    "apple",
    "arc",
    "core",
    "foundation",
    "ios",
    "mac",
    "macos",
    "os",
    "rc",
    "release",
    "retain",
]
license.workspace = true
name = "retain-release"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true
